# darbia-shipping

./: .buildinfo  .gitignore  Cargo.toml  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: audit.yaml  ci.yaml  docs.yaml
api/: crates.js  search-index.js  settings.html  source-files.js
api/darbia_fedex/: all.html  index.html
api/darbia_shipping/: all.html  index.html
api/darbia_ups/: all.html  fn.call.html  index.html  sidebar-items.js
api/darbia_usps/: all.html  index.html
api/src/darbia_fedex/: lib.rs.html
api/src/darbia_shipping/: lib.rs.html
api/src/darbia_ups/: lib.rs.html
api/src/darbia_usps/: lib.rs.html
darbia_fedex/: Cargo.toml
darbia_shipping/: Cargo.toml
darbia_ups/: Cargo.toml
darbia_ups/src/: lib.rs
darbia_usps/: Cargo.toml
docs/source/: conf.py  index.rst
